# AI_F1_Driver

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_HELPER.md  CONTRIBUTING.md  LICENSE  README.md  batch_size_optimizer.py  bootstrap_repository.bat  bootstrap_repository.sh  create_project_structure.py  cuda_kernels.py  cuda_setup_guide.md  dev_tools.py  experiment_manager.py  generate_readme.py  gpu_config_manager.py  gpu_configuration_guide.md  gpu_memory_manager.py  gpu_monitor.py  gpu_profiler.py  gpu_training_integration.py  init_git_repo.py  install_pytorch.py  integrate_track_with_environment.py  mixed_precision_config.py  optimization_advisor.py  parallel_env_config.py  pyproject.toml  pytest.ini  racing_line_preprocessor.py  requirements-dev.txt  requirements.txt  setup.bat  setup.py  setup_git_lfs.bat  setup_project_structure.py  tensorboard_config.py  test_gpu_setup.py  (+14 more)
.github/: PULL_REQUEST_TEMPLATE.md
configs/: aero_config.json  config.json  default_config.json  gpu_config.json  logging_config.json  powertrain_config.json  tire_config.json  training_config.json  vehicle_config.json  yas_marina_config.json
control/: __init__.py  gear_controller.py  longitudinal_controller.py  steering_controller.py
cuda_extensions/: track_ops.cpp  track_ops_kernel.cu
data/: installed_tracks_index.json
docs/: aerodynamics_model.md  faq.md  index.md  installation.md  mkdocs.yml  performance_optimization.md  phase2_checklist.md  phase2_completion_report.md  powertrain_model.md  quickstart.md  setup_guide.md  tire_model.md  (+3 more)
(+126 files in other folders)
